kmeans knn finished

--- a/src/Unsupervised.ipynb
+++ b/src/Unsupervised.ipynb
@@ -969,7 +969,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 221,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -977,17 +977,6 @@
                 "\n",
                 "dump(mod_kmeans, open('../models/k-means_n_clusers-6_n_init-auto_11.sav', 'wb'))\n",
                 "dump(knn_model, open('../models/knn_n_neighbors-3_algorithm-auto_metric-euclidean_p-1_weights-uniform_11.sav', 'wb'))"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 191,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# best_model = KNeighborsClassifier(**best_combination)\n",
-                "# best_model.fit(X_train, y_train)\n",
-                "# y_pred = best_model"
             ]
         },
         {
@@ -1023,7 +1012,11 @@
                 "\n",
                 "# # Evalúa el modelo en el conjunto de prueba\n",
                 "# accuracy = best_knn.score(X_test, y_test)\n",
-                "# print(\"Accuracy en conjunto de prueba:\", accuracy)"
+                "# print(\"Accuracy en conjunto de prueba:\", accuracy)\n",
+                "\n",
+                "# best_model = KNeighborsClassifier(**best_combination)\n",
+                "# best_model.fit(X_train, y_train)\n",
+                "# y_pred = best_model"
             ]
         }
     ],
